

SUFFIXES	= .cpp .hpp .idl .c .h .f .F .o .moc .cc

lib_LTLIBRARIES	= libmnetlib.la

libmnetlib_la_SOURCES	= NetLib.cpp Layer.cpp LayerLib.cpp Pattern.cpp NeuronLib.cpp Learner.cpp \
			  			  Registry.cpp doubleMat.cpp StringTokenizer.cpp

include_HEADERS= doubleMat.h Exception.h Factory.h Layer.h LayerLib.h Learner.h Net.h NetLib.h Neuron.h \
				 NeuronLib.h Pattern.h Registry.h StringTokenizer.h Synapse.h SynapseLib.h

